--- a/index.html
+++ b/index.html
@@ -5,10 +5,8 @@
 </head>
 <body>
 
-<h1>Çàãîëîâîê</h1>
-<p>ìîé ïåðâûé ñàéò
-  <link "href = fshdjhkjsd"> 
- </p>
+<h1>Нормальный заголовок</h1>
+<p>Нормальный текст</p>
 
 </body>
 </html>
