--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-
+NEW FEATURE
 <h1>Нормальный заголовок
 <p>Нормальный текст</p>
 
