Передвинули текст на центр

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 </head>
 <body>
 
-<h1>Заголовок</h1>
-<p>Текст</p>
-<p>Текст2</p>
-<p>Текст3</p>
+<h1 align="center">Заголовок</h1>
+<p align="center">Текст</p>
+<p align="center">Текст2</p>
+<p align="center">Текст3</p>
 
 </body>
 </html>
