--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 </head>
 <body>
 
-<h1 align="center">Заголовок</h1>
-<p align="center">Текст</p>
-<p align="center">Текст2</p>
-<p align="center">Текст3</p>
+<h1 align="left">Г‡Г ГЈГ®Г«Г®ГўГ®ГЄ</h1>
+<p align="center">Г’ГҐГЄГ±ГІ</p>
+<p align="center">Г’ГҐГЄГ±ГІ2</p>
+<p align="center">Г’ГҐГЄГ±ГІ3</p>
 
 </body>
 </html>
