--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 </head>
 <body>
 
-<h1 align="left">Çàãîëîâîê</h1>
-<p align="center">Òåêñò</p>
-<p align="center">Òåêñò2</p>
-<p align="center">Òåêñò3</p>
+<h1 align="left">Head</h1>
+<p align="center">Text 1</p>
+<p align="center">Text 2</p>
+<p align="center">Text 3</p>
 
 </body>
 </html>
