--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <p align="center">Text 1</p>
 <p align="center">Text 2</p>
 <p align="center">Text 3</p>
+<p align="center">Text 4</p>
 
 </body>
 </html>
