--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
 <p align="center">Text 3</p>
 <p align="center">Text 4</p>
 <p align="center">Text 5</p>
+<p align="center">Text 6</p>
 </body>
 </html>
