--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-<h1 align="left">Head</h1>
+<h1 align="left">Headd</h1>
 <p align="center">Text 1</p>
 <p align="center">Text 2</p>
 <p align="center">Text 3</p>
